--- a/SportApp/package.json
+++ b/SportApp/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo-google-fonts/hammersmith-one": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
