--- a/SportApp/tsconfig.json
+++ b/SportApp/tsconfig.json
@@ -14,7 +14,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "app/FavSportsListPage.tsx",
+    "app/(tabs)/FavSportsListPage.tsx",
     "test/HomePage.test.js"  
   ]
 }
